--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "mmemo"
 version = "0.1.0"
 edition = "2024"
+description = "A simple CLI memo management tool"
+license = "MIT"
+repository = "https://github.com/nagokos/mmemo"
+readme = "README.md"
+keywords = ["cli", "memo", "notes"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 toml = "0.9.8"
